<resources>
    <string name="ad">Ad</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="to">To</string>
    <string name="order_id">Order Id</string>
    <string name="app_name">Export Contact For WA</string>
    <string name="app_name_title">Export Contacts</string>
    <string name="delete_chat">Do you want to delete?</string>
    <string name="yes">Yes</string>
    <string name="general">General</string>
    <string name="premium">Premium Plan</string>
    <string name="devloper_desc">DirectChat is a great tool for your favourite messenger app to send messages to any numbers those are not saved in your contacts</string>
    <string name="check_my_social_media">Check our social media</string>
    <string name="customer_services">Customer services</string>
    <string name="write_review">Write review …</string>
    <string name="submit">Submit</string>
    <string name="first_name1">First name</string>
    <string name="describe_your_issue">Describe your issue</string>
    <string name="subscribe_now">Subscribe Now</string>
    <string name="message_content">Message content :</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="app_image_desc">app_image_desc</string>
    <string name="bug_report">Bug Report</string>
    <string name="faqs" translatable="false">FAQs</string>
    <string name="blog">Blog</string>
    <string name="check_for_update">Check for update</string>
    <string name="about_us">About Us</string>
    <string name="request_a_features">Request A Features</string>
    <string name="developers">Developers</string>
    <string name="rate_us">Rate Us</string>
    <string name="contact_us">Contact Us</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_condition">Terms &amp; Condition</string>
    <string name="follow_us">Follow Us</string>
    <string name="enter_bnck">Enter number of blank characters</string>
    <string name="entr_txt">Enter Text to Send Message many Friends at same time.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_msg_parse">Error in message parsing!!</string>
    <string name="vcf">VCF</string>
    <string name="version_app">Version</string>
    <string name="version_code">1.0</string>
    <string name="view">VIEW CONTACTS</string>
    <string name="wa_wb_dialouge_msg">Oh! Looks like you are using WhatsApp Business along with WhatsApp Messenger. Please choose either of them to go the contacts.</string>
    <string name="welcome_text">Welcome to\10Export Contacts for WhatsApp</string>
    <string name="welcome_text_dis">Welcome to\10Export Contacts for WhatsApp</string>
    <string name="whatsappB_in_your_phone">Whatsapp business Contactss</string>
    <string name="whatsapp_contact">WhatsApp Contact</string>
    <string name="whatsapp_contact_msg">Your All WhatsApp Contact exported</string>
    <string name="whatsapp_in_your_phone">Whatsapp Contacts</string>
    <string name="write_app_link">Write App Link End of the Message</string>
    <string name="xml">XML</string>
    <string name="yes_c">Yes</string>
    <string name="manage_external">Manage All File</string>
    <string name="total">Total</string>
    <string name="total_export">Total Export:</string>
    <string name="total_exported_contacts">Total Exported Contacts</string>
    <string name="total_in_your_phone">Total Contacts In Your Phone</string>
    <string name="total_whatsApp_contact">Total WhatsApp Contact :</string>
    <string name="export">Export Contact</string>
    <string name="export_100">Export 100</string>
    <string name="export_1000_contacts">Export 1000 Contacts</string>
    <string name="export_100_contacts">Export 100 Contacts</string>
    <string name="export_file">Export</string>
    <string name="export_type">Choose export type</string>
    <string name="export_unlimited_contacts">Export Unlimited Contacts</string>
    <string name="exported_files">EXPORTED FILES</string>
    <string name="exporting_msg">Exporting Contacts</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="ok">OK</string>
    <string name="okay">OKAY</string>
    <string name="open_in">Open In Whatsapp</string>
    <string name="option_create_folder">New folder</string>
    <string name="IP">IP address</string>
    <string name="PRODUCT_ID_1000">com.exportcontact.contactoswhatsapp.exportimportcontact.whatscontact.1thousand</string>
    <string name="PRODUCT_ID_FULL">com.exportcontact.contactoswhatsapp.exportimportcontact.whatscontact.full</string>
    <string name="Share">Share</string>
    <string name="instruction_how_to_use_desktop_version1">1. Click on the START button</string>
    <string name="instruction_how_to_use_desktop_version2">2. Copy the above url in your Web Browser (Chrome, Firefox, etc)..</string>
    <string name="instruction_how_to_use_desktop_version3">3. That\'s it!! Now you can Export + Import your Contacts from your Desktop</string>
    <string name="instructions">Whatsapp Contact Web</string>
    <string name="biling_box_msg">You can export only 100 contacts.</string>
    <string name="biling_box_msg_1000">Buy limited version you can only export 1000 contacts. Purchase full version to export all contacts.</string>
    <string name="biling_box_msg_unlimited">Buy full version you can export unlimited contacts.</string>
    <string name="biling_box_title">Purchase Full Version</string>
    <string name="feature_include">Feature include</string>
    <string name="feedback">Feedback</string>
    <string name="file_import_status">File Import Status</string>
    <string name="file_located_msg">Contact is exported at</string>
    <string name="file_name">Enter file name</string>
    <string name="file_name_dialog_msg">Enter export file name here</string>
    <string name="file_name_error">Please enter valid file name</string>
    <string name="file_name_suggestion">Please Change your file name for uploading file</string>
    <string name="file_upload_fail">Uploding fail.</string>
    <string name="no">No</string>
    <string name="no_c">No</string>
    <string name="no_file_found">Couldn\'t find apps to open this file.</string>
    <string name="no_file_is_available">No file is available</string>
    <string name="no_internet_available">No Internet Connection</string>
    <string name="no_internet_desc">Please check your internet connection or try again later.</string>
    <string name="no_internet_title">No Internet Connection</string>
    <string name="no_internet_try_again">Try again</string>
    <string name="no_nwhatsapp_contact_navailable">None of your contacts are using WhatsApp.</string>
    <string name="no_result_found">Results not found</string>
    <string name="no_whatsapp">Please install WhatsApp.</string>
    <string name="no_whatsapp_contact_msg">You have no whatsapp contact to export</string>
    <string name="none">None</string>
    <string name="normal_use">Normal Use</string>
    <string name="notes">Notes</string>
    <string name="noti_delete_msg">Are you sure you want to Remove it?</string>
    <string name="number">Number</string>
    <string name="select_purchase">Select Item for Purchase</string>
    <string name="send_error_hint">Type your suggestions and feedbacks here.</string>
    <string name="send_error_text">We really appreciate your Priceless suggestions and feedbacks. We have a designated support staff team who obligedfully looks at all of your inputs and try ad implement the best ones in our future updates.</string>
    <string name="send_error_title">Send Error Message</string>
    <string name="share_app">Share WCE App</string>
    <string name="share_app_summary">You can share your app from here only.</string>
    <string name="share_application_text">Export Contacts For WhatsApp separates all your WhatsApp contacts who are using WhatsApp and exports it. Amazing app I really loved it and it helped me in my business It will help you too!! Click here to download the app. http://bit.ly/WCEShare</string>
    <string name="share_dilog_title">Share Application</string>
    <string name="shorton">SHOTON STAMP CAMERA</string>
    <string name="txt_inapp_get_premium_desc_1">Yes! We are working hard to give you the</string>
    <string name="txt_inapp_get_premium_desc_2">Best Possible Experience!!</string>
    <string name="txt_inapp_get_premium_desc_3">(With or Without the Premium version!)</string>
    <string name="txt_inapp_no_internet_desc_1">Please make sure that you are Connected to internet…</string>
    <string name="txt_inapp_no_internet_desc_2">Try Again</string>
    <string name="txt_inapp_no_internet_title">No Internet Connection</string>
    <string name="txt_send_error_message">Please enter min 12 characters.</string>
    <string name="txt_sucess">success</string>
    <string name="unlimited_contacts">UNLIMITED\10CONTACTS</string>
    <string name="update_history">Update History</string>
    <string name="update_string_bottom">We sincerely hope that you all will enjoy our new Features and Updates.</string>
    <string name="uploaded_file_name">Uploaded Filename:</string>
    <string name="vI_313">• Improved performance. \10• Solved minor bugs.</string>
    <string name="vI_314">• Solved WhatsApp Business contact issue. \10• Improved performance. \10• Minor updates and bug fixes.</string>
    <string name="inapp_biling_box_msg_1000">Buy limited version you can only export 1000 contacts.</string>
    <string name="inapp_biling_box_msg_unlimited">Buy full version you can export unlimited contacts.</string>
    <string name="inapp_txt_1">Unlimited WhatsApp Contacts can be Exported at a time.</string>
    <string name="inapp_txt_1000">1000 WhatsApp Contacts can be Exported at a time.</string>
    <string name="inapp_txt_2">Exporting contacts in Window Desktop is accessible as well.</string>
    <string name="inapp_txt_3">You won\'t see any advertisements pop-up in the application at all.</string>
    <string name="loading">Loading…</string>
    <string name="mail_app">No email client installed.</string>
    <string name="mail_app_titel">Choose an email client from…</string>
    <string name="business_use">Business Use</string>
    <string name="buy">Buy</string>
    <string name="buy_full">Buy Full Version</string>
    <string name="desktop_accessible">DESKTOP\10ACCESSIBLE</string>
    <string name="desktop_app_name">Export Contact For WhatsApp</string>
    <string name="desktop_biling_box_msg">By purchasing Desktop Version of this application you can export WhatsApp contacts into CSV file and import VCF file to add contacts in phone book using web browser.</string>
    <string name="desktop_biling_box_titel">Buy Desktop Version Only</string>
    <string name="desktop_export">EXPORT CONTACTS</string>
    <string name="desktop_import_titel">Import New Contacts</string>
    <string name="desktop_view">VIEW CONTACTS</string>
    <string name="desktop_view_titel">Your WhatsApp Contact</string>
    <string name="remove_ads">REMOVE\10ADS</string>
    <string name="report_error">Error Report</string>
    <string name="enter_export_file_name_here">Enter export file name here</string>
    <string name="first_name">Name</string>
    <string name="ad_free">Ad - Free</string>
    <string name="ad_free_desc">Ads? Sorry, none for our Pro Users!</string>
    <string name="premium_plan">Premium Plan</string>
    <string name="buy_now">Buy Now</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="billed_weekly">Billed Weekly</string>
    <string name="billed_monthly">Billed Monthly</string>
    <string name="billed_yearly">Billed Yearly</string>
    <string name="active">Active</string>
</resources>