<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rlContactExp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/card_color"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <include
        android:id="@+id/ic_include"
        layout="@layout/content_toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_banner"
        android:layout_below="@+id/ic_include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/fl_native"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textview_contact_support_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:padding="12dp"
                        android:text="@string/file_name"
                        android:textColor="@color/colorBlack"
                        android:textSize="16sp" />


                    <EditText
                        android:id="@+id/edittext_export_contact"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginBottom="20dp"
                        android:autofillHints="@string/first_name"
                        android:background="@drawable/shape_card_color"
                        android:hint="@string/enter_export_file_name_here"
                        android:inputType="none|text|textMultiLine|textImeMultiLine"
                        android:maxLines="2"
                        android:textColorHint="@color/grey_500"
                        android:paddingStart="10.0dp"
                        android:paddingEnd="10.0dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="15sp" />


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_save_file"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginEnd="15dp"
                            android:layout_marginBottom="20dp"
                            android:background="@drawable/button_light"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:minHeight="40dp"
                            android:text="@string/export"
                            android:textColor="@color/white"
                            android:textSize="16sp" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical" />
</RelativeLayout>
