<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <LinearLayout
        android:id="@+id/llWeekly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_item_purchase"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rbWeek"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/appColor"
            android:clickable="false" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtWeek"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:text="@string/weekly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/txtWeekP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtWeek"
                android:fontFamily="@font/regular"
                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingTop="3dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/billed_weekly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>

        <TextView
            android:id="@+id/txtWeekA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_btn"
            android:fontFamily="@font/bold"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:paddingEnd="10dp"
            android:paddingBottom="5dp"
            android:text="@string/active"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llMonthly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_item_purchase"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rbMonth"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/appColor"
            android:clickable="false" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtMonth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:text="@string/monthly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/txtMonthP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtMonth"
                android:fontFamily="@font/regular"
                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingTop="3dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/billed_monthly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtMonthA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_btn"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/active"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn"
                android:fontFamily="@font/regular"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="Save 15%"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llYearly"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/selector_item_purchase"
        android:padding="10dp">

        <RadioButton
            android:id="@+id/rbYear"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:backgroundTint="@color/appColor"
            android:checked="true"
            android:clickable="false" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/txtYear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:paddingStart="20dp"
                android:paddingTop="5dp"
                android:paddingEnd="20dp"
                android:text="@string/yearly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/txtYearP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtYear"
                android:fontFamily="@font/regular"
                android:maxLines="2"
                android:paddingStart="20dp"
                android:paddingTop="3dp"
                android:paddingEnd="0dp"
                android:paddingBottom="5dp"
                android:text="@string/billed_yearly"
                android:textColor="@color/black"
                android:textSize="@dimen/text_12" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtYearA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/shape_btn"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="@string/active"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:visibility="gone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_btn"
                android:fontFamily="@font/bold"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="5dp"
                android:text="Save 40%"
                android:textColor="@color/white"
                android:textSize="11sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>