<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appColor">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/appColor">

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back_arrow"
            app:tint="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imgBack">


            <TextView
                android:id="@+id/txtFirst"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:paddingTop="25dp"
                android:paddingEnd="20dp"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </RelativeLayout>
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlHeader"
        android:background="@drawable/shape_bottom"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <include layout="@layout/layout_premium_features" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/medium"
                android:gravity="center"
                android:padding="15dp"
                android:text="@string/premium_plan"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <include layout="@layout/layout_premium_plan" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnBuyNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/shape_btn"
                android:fontFamily="@font/bold"
                android:gravity="center"
                android:text="@string/buy_now"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_term"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="30dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp"
                android:text=""
                android:textColor="@color/black"
                android:textSize="13sp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</RelativeLayout>